--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,14 @@
 .button-signup {
     border: 0cap;
 }
+
+.row {
+    background-color: #253858;
+    color: #ffffff;
+    background-image: linear-gradient(180deg, #253858, #091e42);
+    background-size: 100% 100%;
+    background-position: top left;
+    background-repeat: no-repeat;
+    padding: 80px 0;
+    
+}
