--- a/styles.css
+++ b/styles.css
@@ -271,3 +271,48 @@ body {
 }
 
 
+.text-center-1 {
+    text-align: center!important;
+    color: #ffffff;
+    
+}
+
+.text-body-emphasis {
+    color: white;
+}
+
+.lead-for-p {
+    text-align: left!important;
+    color: white;
+    margin-left: -10px!important;
+}
+
+.pt-5 {
+    padding-top: 3rem!important;
+    
+}
+
+.px-4 {
+    padding-right: 1.5rem!important;
+    padding-left: 1.5rem!important;
+}
+.my-5 {
+    margin-top: 3rem!important;
+    margin-bottom: 3rem!important;
+}
+.border-bottom {
+    border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color)!important;
+}
+
+.get-started-text {
+    font-size: 1.5rem; 
+    font-weight:500; 
+}
+
+.btn-features {
+    color: white;
+    background-color: transparent;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
