--- a/styles.css
+++ b/styles.css
@@ -316,3 +316,116 @@ body {
     font-size: 18px;
     cursor: pointer;
 }
+
+/* footer */
+
+.row-footer {
+    background-color: white;
+    --bs-gutter-x: 3.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-.5 * var(--bs-gutter-x));
+  margin-left: calc(1 * var(--bs-gutter-x));
+  font-size: small;
+}
+
+.d-flex {
+    background-color: white;
+}
+
+.py-4 {
+    padding-top: 1.5rem!important;
+    padding-bottom: 1.5rem!important;
+}
+.my-4 {
+    margin-top: 1.5rem!important;
+    margin-bottom: 1.5rem!important;
+}
+
+.justify-content-between {
+    justify-content: space-between!important;
+}
+.flex-column {
+    flex-direction: column!important;
+}
+.border-top {
+    border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color)!important;
+}
+
+.dropdown-languange .btn {
+    border: none;
+    background-color: transparent;
+    color: #000; 
+  }
+  .dropdown-languange .btn:hover {
+    background-color: transparent;
+    color: #555; 
+  }
+
+  .dropdown-languange {
+    display: flex;
+    align-items: center; 
+}
+
+.dropdown-languange .btn {
+    border: none;
+    background-color: transparent;
+    color: #000; 
+    display: flex;
+    align-items: center; 
+}
+
+.dropdown-languange .btn img {
+    margin-right: 0.5rem; 
+}
+
+.footer-text {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -0.5rem; 
+    align-items: center; 
+}
+
+.footer-text p {
+    margin: 0; 
+    padding-right: 1rem; 
+}
+
+.list-unstyled {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin-left: auto; 
+}
+
+.list-unstyled li {
+    margin-left: 1rem;
+}
+
+
+
+
+.footer-column {
+    margin-right: 20px;
+  }
+
+  /* Updated styles for heading and list items */
+  .footer-heading {
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+  .footer-list-item {
+    margin-bottom: 10px;
+    font-size: 10px;
+  }
+
+  /* Added this CSS to make the columns align on the same line */
+  .footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Adjust the gap as needed */
+  }
+  
